tests/invalidTest/typeConvert/test_uint16.q
# EXPECT type cannot be converted
def uint16 test(){
     uint16 var0 = 65536
  return 0
}

